--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,11 +1,15 @@
 ---
 name: Run Unit Tests
 
-on: push
+on: 
+  push:
+    branches:
+      - master
 
 jobs:
-  test:
-    name: Test Application
+  build:
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
+`
