add build docker image

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,4 +13,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v1
+      - name: Build doker image
+        run: |
+          cd node
+          docker build -t temp/build .
         
