--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Build Application
 
     steps:
       - name: Checkout Code
@@ -17,4 +18,15 @@ jobs:
         run: |
           cd node
           docker build -t temp/build .
+      - name: Login
+        uses: docker/login-action@v1
+        with: 
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push docker image
+        run: |
+          docker tag temp/build benishere/cicdassignment:latest
+          docker tag temp/build benishere/cicdassignment:${{ github.sha }}
+          docker push benishere/cicdassignment:latest
+          docker push benishere/cicdassignment:${{ github.sha }}
         
